Add Header section of website

--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
 </head>
 
 <body>
-    
-
+    <div>
+        <div>
+            <h1>Header Logo</h1>
+            <ul>header link one</ul>
+            <ul>header link two</ul>
+            <ul>header link three</ul>
+        </div>
+        
+        <div>
+            <h2>This website is awesome</h2>
+            <p>This website has some subtext that goes here under the main title. It.s a smaller font and the color is lower contrast</p>
+            <button>Sign up</button>
+            <img src="header-img.jpg" alt="cute picture of shiba-inu laying on fluffy pillow">
+        </div>
+    </div>
 
 
 
