Add part of mid-section of website

--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
             <img src="header-img.jpg" alt="cute picture of shiba-inu laying on fluffy pillow">
         </div>
     </div>
+    <div>
+        <div>
+            <h2>Some random information</h2>
+            <div> <img src="info-img1.jpg" alt=""> </div>
+            <div> <img src="info-img2.jpg" alt=""> </div>
+            <div> <img src="info-img3.jpg" alt=""> </div>
+            <div> <img src="info-img4.jpg" alt=""> </div>
 
+
+        </div>
+
+    </div>
 
 
 
