--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 
 <body>
-    <div>
-        <div>
-            <h1>Header Logo</h1>
+    <div class="header-footer">
+        <div class="header">
+            <h1 class="logo">Header Logo</h1>
             <ul>header link one</ul>
             <ul>header link two</ul>
             <ul>header link three</ul>
         </div>
         
         <div>
-            <h2>This website is awesome</h2>
-            <p>This website has some subtext that goes here under the main title. It.s a smaller font and the color is lower contrast</p>
+            <h2 class="hero">This website is awesome</h2>
+            <p class="hero-text">This website has some subtext that goes here under the main title. It.s a smaller font and the color is lower contrast</p>
             <button>Sign up</button>
             <img src="header-img.jpg" alt="cute picture of shiba-inu laying on fluffy pillow">
         </div>
@@ -26,22 +26,26 @@
     <div>
         <div>
             <h2>Some random information</h2>
-            <div> <img src="info-img1.jpg" alt=""> </div>
-            <div> <img src="info-img2.jpg" alt=""> </div>
-            <div> <img src="info-img3.jpg" alt=""> </div>
-            <div> <img src="info-img4.jpg" alt=""> </div>
-
-
+            <div> 
+            <img src="info-img1.jpg" alt="">
+            <img src="info-img2.jpg" alt=""> 
+            <img src="info-img3.jpg" alt=""> 
+            <img src="info-img4.jpg" alt=""> 
+            </div>
         </div>
-
     </div>
-
-
-
-
-
-
-
+    <div>
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <q>-Thor, God of Thunder</q>
+    </div>
+    <div>
+        <h2>Call to action! It's time!</h2>
+        <p>Sign up for our product by clicking that button right over there!</p>
+        <button>Sign up</button>
+    </div>
+    <div class="header-footer">
+        <p>Copyright @ The Odin Project 2021</p>
+    </div>
 
 </body>
 </html>
