Add hero alignment and flex

--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
             </div>
         </div>
         
-        <div>
-            <h2 class="hero">This website is awesome</h2>
-            <p class="hero-text">This website has some subtext that goes here under the main title. It.s a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
-            <img src="header-img.jpg" alt="cute picture of shiba-inu laying on fluffy pillow">
+        <div class="head-hero">
+            <div class="heros-img1">
+                <div class="heros">
+                    <h2 class="hero">This website is awesome</h2>
+                    <p class="hero-text">This website has some subtext that goes here under the main title. It.s a smaller font and the color is lower contrast</p>
+                    <button class="hero-button">Sign up</button>
+                </div>
+                <img class="img1" src="header-img.jpg" alt="">
+            </div>
         </div>
     </div>
-    <div>
+    <div class="rinfo">
         <div>
             <h2>Some random information</h2>
             <div> 
@@ -37,11 +41,11 @@
             </div>
         </div>
     </div>
-    <div>
+    <div class="quote">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <q>-Thor, God of Thunder</q>
     </div>
-    <div>
+    <div class="action">
         <h2>Call to action! It's time!</h2>
         <p>Sign up for our product by clicking that button right over there!</p>
         <button>Sign up</button>
