--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
                 <ul>header link two</ul>
                 <ul>header link three</ul>
             </div>
-        </div>
-        
+        </div> 
         <div class="head-hero">
             <div class="heros-img1">
                 <div class="heros">
@@ -26,29 +25,47 @@
                     <p class="hero-text">This website has some subtext that goes here under the main title. It.s a smaller font and the color is lower contrast</p>
                     <button class="hero-button">Sign up</button>
                 </div>
-                <img class="img1" src="header-img.jpg" alt="">
+                <img class="img1-head" src="header-img.jpg" alt="">
             </div>
         </div>
     </div>
     <div class="rinfo">
         <div>
-            <h2>Some random information</h2>
-            <div> 
-            <img src="info-img1.jpg" alt="">
-            <img src="info-img2.jpg" alt=""> 
-            <img src="info-img3.jpg" alt=""> 
-            <img src="info-img4.jpg" alt=""> 
+            <h2 class="rinfo-head">Some random information</h2>
+            <div class="rinfo-images"> 
+                <div class="img1-text">
+                    <img class="img1" src="info-img1.jpg" alt="">
+                    <span class="text1">Text below image 1</span>
+                </div>
+                <div class="img2-text">
+                    <img class="img2" src="info-img2.jpg" alt="">
+                    <span class="text2">Text below image 2</span>
+                </div>
+                <div class="img3-text"> 
+                    <img class="img3" src="info-img3.jpg" alt=""> 
+                    <span class="text3">Text below image 3</span>
+                </div>
+                <div class="img4-text">
+                    <img class="img4" src="info-img4.jpg" alt=""> 
+                    <span class="text4">Text below image 4</span>
+                </div>
             </div>
         </div>
     </div>
     <div class="quote">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <q>-Thor, God of Thunder</q>
+        <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filing up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <div class="quote-quote">
+            <q>-Thor, God of Thunder</q>
+        </div>
     </div>
     <div class="action">
-        <h2>Call to action! It's time!</h2>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+        <div class="action-blue">
+            <div class="action-text">
+                <h2 class="action-h2">Call to action! It's time!</h2>
+                <p class="action-p">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="action-button">Sign up</button>
+        </div>
     </div>
     <div class="footer">
         <p>Copyright @ The Odin Project 2021</p>
