Finish website, as per assignment

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             <div class="rinfo-images"> 
                 <div class="img1-text">
                     <img class="img1" src="info-img1.jpg" alt="">
-                    <span class="text1">Text below image 1</span>
+                    <span class="text1">this is some subtext under an illustration or image</span>
                 </div>
                 <div class="img2-text">
                     <img class="img2" src="info-img2.jpg" alt="">
-                    <span class="text2">Text below image 2</span>
+                    <span class="text2">this is some subtext under an illustration or image</span>
                 </div>
                 <div class="img3-text"> 
                     <img class="img3" src="info-img3.jpg" alt=""> 
-                    <span class="text3">Text below image 3</span>
+                    <span class="text3">this is some subtext under an illustration or image</span>
                 </div>
                 <div class="img4-text">
                     <img class="img4" src="info-img4.jpg" alt=""> 
-                    <span class="text4">Text below image 4</span>
+                    <span class="text4">this is some subtext under an illustration or image</span>
                 </div>
             </div>
         </div>
